--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ button {
   font-family: var(--font-heading);
   text-align: center;
   font-size: 2rem;
-  margin: 30px 0 10px;
+  margin: 30px 0 15px;
 }
 .section-title i {
   color: var(--primary);
